2008-09-09  Marek Kasik  <mkasik@redhat.com>
	Bug 551386 – gtk_printer_set_is_default() always sets TRUE

	* gtk/gtkprinter.c: sets the is_default parameter to the value
	given by caller

2008-09-08  Cosimo Cecchi  <cosimoc@gnome.org>

	Bug 551325 - Reference to wrong parameter in gtk_editable_insert_text

	* gtk/gtkeditable.c: Fix a reference to an invalid parameter in the
	docs.

2008-09-08  Paolo Borelli  <pborelli@katamail.com>

	* gtk/gtkfilechooserentry.c (install_start_autocompletion_idle):
	use gdk_threads_add_idle so that the handler acquires the lock
	since it calls gtk functions.

2008-09-08  Tor Lillqvist  <tml@novell.com>

	* configure.in (debug_default): Correct help string for
	--disable-gdiplus.

2008-09-07  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c: Actually use mime types, not content
	types, for mimetype-based filtering, so it may work on win32.

2008-09-07  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c (search_selected_foreach_get_file_cb): 
	Ref the files, to make gtk_file_chooser_get_files() behave as
	documented.

	* gtk/gtkfilechooserdefault.c (search_clear_model): Don't leak
	the content of the search model.
	
	* gtk/gtkfilechooserdefault.c (search_hit_get_info_cb): Don't leak
	the content here, either.

2008-09-07  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c (search_add_hit): Don't unref the
	GFile we just put into the search_model. This adds a new memory
	leak...

2008-09-07  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c (shortcuts_append_bookmarks): Plug
	a memory leak.

2008-09-06  Matthias Clasen  <mclasen@redhat.com>

	Bug 550062 – Small update in gdk/gdkkeysyms.h

	* gdk/gdkkeysyms.h: Add dead_perspomeni and fix dead_dasia.
	Patch by Simos Xenitellis

2008-09-06  Matthias Clasen  <mclasen@redhat.com>

	Bug 550989 – gdk_display_put_event() should call
	g_main_context_wakeup()
